# skinone-Upload-Classification

./: .gitignore  DJANGO_API_ROUTES.md  ROUTE_TESTING_SUMMARY.md  demo_auth_user_model.py  docker-compose.yaml  manage.py  openapi-schema.yaml  pyproject.toml  run_route_tests.py  run_tests.py  test_all_routes.py  test_auth_integration.py  test_base64_support.py  test_classification_api.py  test_jwt_auth.html  test_jwt_auth.py  test_upload.html  test_upload.py
Skin Test/: Register.bru  bruno.json
classification/: admin.py  models.py  test_routes.py  urls.py  views.py
classification/migrations/: 0001_initial.py  0002_remove_classification_classification_and_more.py  0003_alter_classification_stage.py  0004_alter_classification_observations_and_more.py
images/: admin.py  models.py  test_routes.py  tests.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_initial.py  0003_image_file_hash_image_file_size_and_more.py  0004_image_description.py
images/templates/images/: upload.html  upload_new.html
skinrest/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin_urls.py  admin_views.py  middleware.py  models.py  test_admin_routes.py  test_routes.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_corem_user_sigla_estado.py  0004_remove_user_corem_remove_user_sigla_estado_and_more.py  0004_rename_corem_user_corem_number.py  0005_remove_user_institution_remove_user_specialty_and_more.py  0006_user_specialty.py
users/templates/users/: auth.html
